--- a/CAMPtina_Backend/src/main/resources/application.properties
+++ b/CAMPtina_Backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=CAMPtina_Backend
+spring.datasource.url=jdbc:h2:mem:apatdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
