--- a/CAMPtina_Backend/pom.xml
+++ b/CAMPtina_Backend/pom.xml
@@ -60,9 +60,14 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		<!-- Altres -->
+		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.33</version>
+    		<scope>runtime</scope>
+		</dependency>
 
+		<!-- Altres -->
 
 	</dependencies>
 
