--- a/CAMPtina_Backend/src/main/resources/application.properties
+++ b/CAMPtina_Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=CAMPtina_Backend
 spring.datasource.url=jdbc:mysql://localhost:3306/camptina
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=albyroez
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 #spring.h2.console.enabled=true
