--- a/CAMPtina_Backend/src/main/resources/application.properties
+++ b/CAMPtina_Backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
+#Camps de seguretat
+Camptina.jwtSecret = camptinaSecretKeyJWT
+Camptina.jwtExpirationMs = 86400000
