Seguretat implementada i funcional

--- a/CAMPtina_Backend/src/main/resources/application.properties
+++ b/CAMPtina_Backend/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=none
 #Camps de seguretat
 Camptina.jwtSecret = camptinaSecretKeyJWT
 Camptina.jwtExpirationMs = 86400000
+spring.jackson.serialization.fail-on-empty-beans=false
