--- a/CAMPtina_Frontend/projecte-camptina/package.json
+++ b/CAMPtina_Frontend/projecte-camptina/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "path-to-regexp": "8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
